--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 logging.level.org.springframework = debug;
 spring.jackson.serialization.write-dates-as-timestamps = false
 spring.messages.basename=messages
+server.port=9090
