Consume configuration from application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-logging.level.org.springframework = debug;
-spring.jackson.serialization.write-dates-as-timestamps = false
-spring.messages.basename=messages
-server.port=9090
+spring.application.name=test-rmm
+test-rmm.page-size=15
