--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,11 @@
 			<version>3.14.0</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter</artifactId>
+			<version>2.2.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
