Enable ldap security for the APIs

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -2,5 +2,12 @@
 spring.jackson.serialization.write-dates-as-timestamps = false
 spring.messages.basename=messages
 server.port=9090
+
+#ldap
+spring.ldap.embedded.port=8389
+spring.ldap.embedded.ldif=classpath:ldap-data.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
+
+
 spring.application.name=test-rmm
 spring.cloud.config.uri=http://localhost:8888/
